# file_modifier

./: CMakeLists.txt  README.md
.kanbn/: index.md
.kanbn/tasks/: feat-fmbackend.md  feat-qml-design.md  feat-Модификация-файла.md  feat-Реализовать-алгоритм-ЧТЕНИЕ-xor-запись.md  feat-Состояния-внутри-модифицируемого-файла.md
docs/: GUI.txt  TODO.txt  TZ.txt  algorithm.txt  processor.txt  struct.txt
include/: FMBackend.h  FileProcessor.h
qml/: Main.qml
qml/components/: MyButton.qml  MyCheckBox.qml  MyProgressBar.qml  MyTextField.qml
qml/resources/: resources.qrc
qml/theme/: Theme.qml
src/: FMBackend.cpp  FileProcessor.cpp  main.cpp
tests/: in1.txt  in2.txt  in3.txt
